parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On program shift to state 1
-- On decls shift to state 2
## Reductions:
-- On VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL
--   reduce production decls ->

State 1:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 2:
## Known stack suffix:
## decls
## LR(1) items:
decls -> decls . vdecl [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
decls -> decls . fdecl [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
decls -> decls . cdecl [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
program -> decls . EOF [ # ]
## Transitions:
-- On VOID shift to state 3
-- On TRIANGLE shift to state 4
-- On STRING shift to state 5
-- On SQUARE shift to state 6
-- On SPLINE shift to state 7
-- On SHAPE shift to state 8
-- On REGAGON shift to state 9
-- On RECT shift to state 10
-- On POLYGON shift to state 11
-- On NUM shift to state 12
-- On LINE shift to state 13
-- On EOF shift to state 14
-- On ELLIPSE shift to state 15
-- On CLASS shift to state 16
-- On CIRCLE shift to state 23
-- On CHAR shift to state 24
-- On CANVAS shift to state 25
-- On BOOL shift to state 26
-- On vdecl shift to state 142
-- On typ shift to state 131
-- On obj shift to state 32
-- On fdecl shift to state 143
-- On cdecl shift to state 144
-- On arr shift to state 125
## Reductions:

State 3:
## Known stack suffix:
## VOID
## LR(1) items:
typ -> VOID . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production typ -> VOID

State 4:
## Known stack suffix:
## TRIANGLE
## LR(1) items:
obj -> TRIANGLE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> TRIANGLE

State 5:
## Known stack suffix:
## STRING
## LR(1) items:
typ -> STRING . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production typ -> STRING

State 6:
## Known stack suffix:
## SQUARE
## LR(1) items:
obj -> SQUARE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> SQUARE

State 7:
## Known stack suffix:
## SPLINE
## LR(1) items:
obj -> SPLINE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> SPLINE

State 8:
## Known stack suffix:
## SHAPE
## LR(1) items:
obj -> SHAPE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> SHAPE

State 9:
## Known stack suffix:
## REGAGON
## LR(1) items:
obj -> REGAGON . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> REGAGON

State 10:
## Known stack suffix:
## RECT
## LR(1) items:
obj -> RECT . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> RECT

State 11:
## Known stack suffix:
## POLYGON
## LR(1) items:
obj -> POLYGON . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> POLYGON

State 12:
## Known stack suffix:
## NUM
## LR(1) items:
typ -> NUM . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production typ -> NUM

State 13:
## Known stack suffix:
## LINE
## LR(1) items:
obj -> LINE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> LINE

State 14:
## Known stack suffix:
## decls EOF
## LR(1) items:
program -> decls EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> decls EOF

State 15:
## Known stack suffix:
## ELLIPSE
## LR(1) items:
obj -> ELLIPSE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> ELLIPSE

State 16:
## Known stack suffix:
## CLASS
## LR(1) items:
cdecl -> CLASS . ID LBRACE cddecls RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On ID shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## CLASS ID
## LR(1) items:
cdecl -> CLASS ID . LBRACE cddecls RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On LBRACE shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## CLASS ID LBRACE
## LR(1) items:
cdecl -> CLASS ID LBRACE . cddecls RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On cddecls shift to state 19
## Reductions:
-- On VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL
--   reduce production cddecls ->

State 19:
## Known stack suffix:
## CLASS ID LBRACE cddecls
## LR(1) items:
cddecls -> cddecls . vdecl [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
cddecls -> cddecls . const_decl [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
cddecls -> cddecls . fdecl [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
cdecl -> CLASS ID LBRACE cddecls . RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On VOID shift to state 3
-- On TRIANGLE shift to state 4
-- On STRING shift to state 5
-- On SQUARE shift to state 6
-- On SPLINE shift to state 7
-- On SHAPE shift to state 8
-- On REGAGON shift to state 9
-- On RECT shift to state 10
-- On RBRACE shift to state 20
-- On POLYGON shift to state 11
-- On NUM shift to state 12
-- On LINE shift to state 13
-- On ELLIPSE shift to state 15
-- On CONSTRUCTOR shift to state 21
-- On CIRCLE shift to state 23
-- On CHAR shift to state 24
-- On CANVAS shift to state 25
-- On BOOL shift to state 26
-- On vdecl shift to state 130
-- On typ shift to state 131
-- On obj shift to state 32
-- On fdecl shift to state 140
-- On const_decl shift to state 141
-- On arr shift to state 125
## Reductions:

State 20:
## Known stack suffix:
## CLASS ID LBRACE cddecls RBRACE
## LR(1) items:
cdecl -> CLASS ID LBRACE cddecls RBRACE . [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL ]
## Transitions:
## Reductions:
-- On VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT POLYGON NUM LINE EOF ELLIPSE CLASS CIRCLE CHAR CANVAS BOOL
--   reduce production cdecl -> CLASS ID LBRACE cddecls RBRACE

State 21:
## Known stack suffix:
## CONSTRUCTOR
## LR(1) items:
const_decl -> CONSTRUCTOR . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On LPAREN shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## CONSTRUCTOR LPAREN
## LR(1) items:
const_decl -> CONSTRUCTOR LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On VOID shift to state 3
-- On TRIANGLE shift to state 4
-- On STRING shift to state 5
-- On SQUARE shift to state 6
-- On SPLINE shift to state 7
-- On SHAPE shift to state 8
-- On REGAGON shift to state 9
-- On RECT shift to state 10
-- On POLYGON shift to state 11
-- On NUM shift to state 12
-- On LINE shift to state 13
-- On ELLIPSE shift to state 15
-- On CIRCLE shift to state 23
-- On CHAR shift to state 24
-- On CANVAS shift to state 25
-- On BOOL shift to state 26
-- On typ shift to state 27
-- On obj shift to state 32
-- On formals_opt shift to state 33
-- On formal_list shift to state 126
-- On arr shift to state 125
## Reductions:
-- On RPAREN
--   reduce production formals_opt ->

State 23:
## Known stack suffix:
## CIRCLE
## LR(1) items:
obj -> CIRCLE . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> CIRCLE

State 24:
## Known stack suffix:
## CHAR
## LR(1) items:
typ -> CHAR . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production typ -> CHAR

State 25:
## Known stack suffix:
## CANVAS
## LR(1) items:
obj -> CANVAS . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production obj -> CANVAS

State 26:
## Known stack suffix:
## BOOL
## LR(1) items:
typ -> BOOL . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production typ -> BOOL

State 27:
## Known stack suffix:
## typ
## LR(1) items:
arr -> typ . LSQBRACKET NUM RSQBRACKET [ LSQBRACKET ID ]
formal_list -> typ . ID [ RPAREN COMMA ]
## Transitions:
-- On LSQBRACKET shift to state 28
-- On ID shift to state 31
## Reductions:

State 28:
## Known stack suffix:
## typ LSQBRACKET
## LR(1) items:
arr -> typ LSQBRACKET . NUM RSQBRACKET [ LSQBRACKET ID ]
## Transitions:
-- On NUM shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## typ LSQBRACKET NUM
## LR(1) items:
arr -> typ LSQBRACKET NUM . RSQBRACKET [ LSQBRACKET ID ]
## Transitions:
-- On RSQBRACKET shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## typ LSQBRACKET NUM RSQBRACKET
## LR(1) items:
arr -> typ LSQBRACKET NUM RSQBRACKET . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production arr -> typ LSQBRACKET NUM RSQBRACKET

State 31:
## Known stack suffix:
## typ ID
## LR(1) items:
formal_list -> typ ID . [ RPAREN COMMA ]
## Transitions:
## Reductions:
-- On RPAREN COMMA
--   reduce production formal_list -> typ ID

State 32:
## Known stack suffix:
## obj
## LR(1) items:
typ -> obj . [ LSQBRACKET ID ]
## Transitions:
## Reductions:
-- On LSQBRACKET ID
--   reduce production typ -> obj

State 33:
## Known stack suffix:
## CONSTRUCTOR LPAREN formals_opt
## LR(1) items:
const_decl -> CONSTRUCTOR LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On RPAREN shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## CONSTRUCTOR LPAREN formals_opt RPAREN
## LR(1) items:
const_decl -> CONSTRUCTOR LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On LBRACE shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE
## LR(1) items:
const_decl -> CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On vdecl_list shift to state 36
## Reductions:
-- On WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE ELLIPSE CIRCLE CHAR CANVAS BOOL
--   reduce production vdecl_list ->

State 36:
## Known stack suffix:
## CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE vdecl_list
## LR(1) items:
const_decl -> CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
vdecl_list -> vdecl_list . vdecl [ WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE ELLIPSE CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On VOID shift to state 3
-- On TRIANGLE shift to state 4
-- On STRING shift to state 5
-- On SQUARE shift to state 6
-- On SPLINE shift to state 7
-- On SHAPE shift to state 8
-- On REGAGON shift to state 9
-- On RECT shift to state 10
-- On POLYGON shift to state 11
-- On NUM shift to state 12
-- On LINE shift to state 13
-- On ELLIPSE shift to state 15
-- On CIRCLE shift to state 23
-- On CHAR shift to state 24
-- On CANVAS shift to state 25
-- On BOOL shift to state 26
-- On vdecl shift to state 37
-- On typ shift to state 38
-- On stmt_list shift to state 41
-- On obj shift to state 32
-- On arr shift to state 125
## Reductions:
-- On WHILE TRUE RETURN RBRACE NOT MINUS LSQBRACKET LPAREN LITERAL LBRACE IF ID FOR FALSE
--   reduce production stmt_list ->

State 37:
## Known stack suffix:
## vdecl_list vdecl
## LR(1) items:
vdecl_list -> vdecl_list vdecl . [ WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE ELLIPSE CIRCLE CHAR CANVAS BOOL ]
## Transitions:
## Reductions:
-- On WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE ELLIPSE CIRCLE CHAR CANVAS BOOL
--   reduce production vdecl_list -> vdecl_list vdecl

State 38:
## Known stack suffix:
## typ
## LR(1) items:
arr -> typ . LSQBRACKET NUM RSQBRACKET [ LSQBRACKET ID ]
vdecl -> typ . ID SEMI [ WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE ELLIPSE CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On LSQBRACKET shift to state 28
-- On ID shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## typ ID
## LR(1) items:
vdecl -> typ ID . SEMI [ WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE ELLIPSE CIRCLE CHAR CANVAS BOOL ]
## Transitions:
-- On SEMI shift to state 40
## Reductions:

State 40:
## Known stack suffix:
## typ ID SEMI
## LR(1) items:
vdecl -> typ ID SEMI . [ WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE EOF ELLIPSE CONSTRUCTOR CLASS CIRCLE CHAR CANVAS BOOL ]
## Transitions:
## Reductions:
-- On WHILE VOID TRUE TRIANGLE STRING SQUARE SPLINE SHAPE RETURN REGAGON RECT RBRACE POLYGON NUM NOT MINUS LSQBRACKET LPAREN LITERAL LINE LBRACE IF ID FOR FALSE EOF ELLIPSE CONSTRUCTOR CLASS CIRCLE CHAR CANVAS BOOL
--   reduce production vdecl -> typ ID SEMI

State 41:
## Known stack suffix:
## CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list
## LR(1) items:
const_decl -> CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE [ VOID TRIANGLE STRING SQUARE SPLINE SHAPE REGAGON RECT RBRACE POLYGON NUM LINE ELLIPSE CONSTRUCTOR CIRCLE CHAR CANVAS BOOL ]
stmt_list -> stmt_list . stmt [ WHILE TRUE RETURN RBRACE NOT MINUS LSQBRACKET LPAREN LITERAL LBRACE IF ID FOR FALSE ]
## Transitions:
-- On WHILE shift to state 42
-- On TRUE shift to state 44
-- On RETURN shift to state 96
-- On RBRACE shift to state 124
-- On NOT shift to state 45
-- On MINUS shift to state 46
-- On LSQBRACKET shift to state 47
-- On LPAREN shift to state 48
-- On LITERAL shift to state 49
-- On LBRACE shift to state 100
-- On IF shift to state 103
-- On ID shift to state 50
-- On FOR shift to state 107
-- On FALSE shift to state 52
-- On stmt shift to state 122
-- On expr shift to state 116
## Reductions:

State 42:
## Known stack suffix:
## WHILE
## LR(1) items:
stmt -> WHILE . LPAREN expr RPAREN stmt [ WHILE TRUE RETURN RBRACE NOT MINUS LSQBRACKET LPAREN LITERAL LBRACE IF ID FOR FALSE ELSE ]
## Transitions:
-- On LPAREN shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
stmt -> WHILE LPAREN . expr RPAREN stmt [ WHILE TRUE RETURN RBRACE NOT MINUS LSQBRACKET LPAREN LITERAL LBRACE IF ID FOR FALSE ELSE ]
## Transitions:
-- On TRUE shift to state 44
-- On NOT shift to state 45
-- On MINUS shift to state 46
-- On LSQBRACKET shift to state 47
-- On LPAREN shift to state 48
-- On LITERAL shift to state 49
-- On ID shift to state 50
-- On FALSE shift to state 52
-- On expr shift to state 94
## Reductions:

State 44:
## Known stack suffix:
## TRUE
## LR(1) items:
expr -> TRUE . [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND
--   reduce production expr -> TRUE

State 45:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 44
-- On NOT shift to state 45
-- On MINUS shift to state 46
-- On LSQBRACKET shift to state 47
-- On LPAREN shift to state 48
-- On LITERAL shift to state 49
-- On ID shift to state 50
-- On FALSE shift to state 52
-- On expr shift to state 93
## Reductions:

State 46:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 44
-- On NOT shift to state 45
-- On MINUS shift to state 46
-- On LSQBRACKET shift to state 47
-- On LPAREN shift to state 48
-- On LITERAL shift to state 49
-- On ID shift to state 50
-- On FALSE shift to state 52
-- On expr shift to state 92
## Reductions:

State 47:
## Known stack suffix:
## LSQBRACKET
## LR(1) items:
expr -> LSQBRACKET . li_contents RSQBRACKET [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 44
-- On NOT shift to state 45
-- On MINUS shift to state 46
-- On LSQBRACKET shift to state 47
-- On LPAREN shift to state 48
-- On LITERAL shift to state 49
-- On ID shift to state 50
-- On FALSE shift to state 52
-- On li_contents shift to state 87
-- On expr shift to state 89
## Reductions:

State 48:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
-- On TRUE shift to state 44
-- On NOT shift to state 45
-- On MINUS shift to state 46
-- On LSQBRACKET shift to state 47
-- On LPAREN shift to state 48
-- On LITERAL shift to state 49
-- On ID shift to state 50
-- On FALSE shift to state 52
-- On expr shift to state 85
## Reductions:

State 49:
## Known stack suffix:
## LITERAL
## LR(1) items:
expr -> LITERAL . [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND
--   reduce production expr -> LITERAL

State 50:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
expr -> ID . LPAREN actuals_opt RPAREN [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
expr -> ID . ASSIGN expr [ SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND ]
## Transitions:
-- On LPAREN shift to state 51
-- On ASSIGN shift to state 83
## Reductions:
-- On SEMI RSQBRACKET RPAREN PLUS OR NEQ MULT MINUS LT LEQ GT GEQ EQ DIV COMMA AND
--   reduce production expr -> ID
